--- a/Natours/starter/sass/main.scss
+++ b/Natours/starter/sass/main.scss
@@ -4,6 +4,7 @@ $color-primary-light: #7ed56f;
 $color-primary-dark: #28b485;
 $color-grey-dark: #777;
 $color-white: #fff;
+$color-black: #000;
 
 *,
 *::after
@@ -39,46 +40,49 @@ body {
     background-position: top;
     clip-path: polygon(0 0,100% 0,100% 75vh,0 100%);
     position:relative;
-}
-.header__logo-box{
-    position: absolute;
-    top: 4rem;
-    left: 4rem;
 
+    &__logo-box{
+        position: absolute;
+        top: 4rem;
+        left: 4rem;
+    }
+    &__logo{
+        height:3.5rem;
+    }
+    &__text-box{
+        position:absolute;
+        top: 40%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+        text-align: center;
+    }
 }
-.header__logo{
-    height:3.5rem;
 
-}
-.header__text-box{
-    position:absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    text-align: center;
-    
-}
+
 .heading-primary{
     color:$color-white;
     text-transform: uppercase;
     margin-bottom: 6rem;
+
+    &--main{
+        display: block;
+        font-size:6rem;
+        font-weight: 400;
+        letter-spacing: 3.5rem;
+        animation-name: moveInRight;
+        animation-duration:1s;
+        animation-timing-function: ease-out;
+    }
+    &--sub{
+        display:block;
+        font-size: 2rem;
+        font-weight: 700;
+        letter-spacing: 1.75rem;
+        animation:moveInRight 1s ease-out
+    }
+
 }
-.heading-primary--main{
-    display: block;
-    font-size:6rem;
-    font-weight: 400;
-    letter-spacing: 3.5rem;
-    animation-name: moveInRight;
-    animation-duration:1s;
-    animation-timing-function: ease-out;
-}
-.heading-primary--sub{
-    display:block;
-    font-size: 2rem;
-    font-weight: 700;
-    letter-spacing: 1.75rem;
-    animation:moveInRight 1s ease-out
-}
+
 
 @keyframes moveInRight{
     0%{
@@ -115,40 +119,42 @@ body {
     position:relative;
     
 }
-.btn:hover{
-    transform:translateY(-.3rem);
-    box-shadow: 0 1rem 2rem rgba(0, 0, 0, .2)
-}
-.btn:active{
-    transform: translateY(-.1rem);
-    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .2)
-}
-.btn--white{
-    background-color: $color-white;
-    color:$color-grey-dark
-}
+.btn{
+    &:hover{
+        transform:translateY(-.3rem);
+        box-shadow: 0 1rem 2rem rgba($color-black,.2);
+        &::after{
+            transform: scale(1.5);
+            opacity: 0;
+        }
+    }
+    &:active{
+        transform: translateY(-.1rem);
+        box-shadow: 0 .5rem 1rem rgba($color-black,.2)
+    }
+    &--white{
+        background-color: $color-white;
+        color:$color-grey-dark;
 
-.btn::after{
-    content:'';
-    display: inline-block;
-    height: 100%;
-    width: 100%;
-    border-radius: 10rem;
-    position:absolute;
-    top:0;
-    left:0;
-    z-index:-1;
-    transition: all, .4s;
+        &::after{
+            background-color: $color-white;
+        }
+    }
+    
+    &::after{
+        content:'';
+        display: inline-block;
+        height: 100%;
+        width: 100%;
+        border-radius: 10rem;
+        position:absolute;
+        top:0;
+        left:0;
+        z-index:-1;
+        transition: all, .4s;
+    }        
+    &--animated{
+        animation:moveInBottom .5s ease-out .75s;
+        animation-fill-mode:backwards;
+    }
 }
-.btn--white::after{
-    background-color: $color-white;
-}
-.btn:hover::after{
-    transform: scale(1.5);
-    opacity: 0;
-}
-.btn--animated{
-    animation:moveInBottom .5s ease-out .75s;
-    animation-fill-mode:backwards;
-}
-
